<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.ulbms.scdh.seed.xc</groupId>
  <artifactId>seed-xc</artifactId>
  <version>${revision}${changelist}</version>

  <packaging>pom</packaging>

  <name>SEED XC</name>
  <description>SEED XC offers components for XML processing webservices</description>
  <url>https://github.com/scdh/seed-xc</url>

  <organization>
    <name>Service Center of Digital Humanities, ULB, University of Münster</name>
    <url>https://www.uni-muenster.de/SCDH/</url>
  </organization>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Christian Lück</name>
      <organization>SCDH, University of Münster</organization>
    </developer>
  </developers>

  <modules>
    <module>api</module>
    <module>plugins</module>
    <module>compiler</module>
    <module>transformations</module>
    <module>transformer</module>
    <module>dts</module>
  </modules>

  <scm>
    <connection>scm:git:https://github.com/scdh/seed-xc.git</connection>
    <developerConnection>scm:git:https://github.com/scdh/seed-xc.git</developerConnection>
    <tag>HEAD</tag>
    <url>scm:git:https://github.com/scdh/seed-xc.git</url>
  </scm>
  <!-- get the build artifacts into the gitlab maven package registry -->
  <distributionManagement>
    <repository>
      <id>seed-xc-maven</id>
      <url>${distribution.url}</url>
    </repository>
    <snapshotRepository>
      <id>seed-xc-maven</id>
      <url>${distribution.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>

    <!-- for the gitlab maven registry -->
    <distribution.url>${env.CI_API_V4_URL}/projects/${env.CI_PROJECT_ID}/packages/maven</distribution.url>

    <compiler-plugin.version>3.14.1</compiler-plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <failsafe.useModulePath>false</failsafe.useModulePath>

    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <quarkus.platform.version>3.36.2</quarkus.platform.version>
    <skipITs>true</skipITs>
    <surefire-plugin.version>3.5.4</surefire-plugin.version>
    <smallrye-jandex-plugin.version>3.5.3</smallrye-jandex-plugin.version>
    <spotless.version>3.4.0</spotless.version>
    <palantir-java-format.version>2.90.0</palantir-java-format.version>
    <assertj.version>3.27.7</assertj.version>

    <!-- service specific -->
    <xmlresolver.version>4.5.1</xmlresolver.version>
    <slf4j.version>2.0.6</slf4j.version>
    <saxon.version>12.9</saxon.version>
    <saxon.artifactId>Saxon-HE</saxon.artifactId>
    <jena.version>6.0.0</jena.version>
    <titanium.version>1.7.0</titanium.version>
    <openapitools.version>7.19.0</openapitools.version>
    <dts-transformations.version>0.5.8</dts-transformations.version>

    <quarkus.native.native-image-xmx>8192m</quarkus.native.native-image-xmx>
    <!-- enable docker layers with additional dependencies,
         cf. https://quarkus.io/guides/container-image#multi-module-projects-and-layering
    -->
    <quarkus.bootstrap.workspace-discovery>true</quarkus.bootstrap.workspace-discovery>

    <!-- change to 'test' if you do not want the low level plugins in your app -->
    <plugins.scope>runtime</plugins.scope>

    <saxon-config.file>${session.executionRootDirectory}/service/src/main/resources/saxon-config-he.xml</saxon-config.file>
    <file-uri-resolver.path>${session.executionRootDirectory}</file-uri-resolver.path>
    <file-uri-resolver.baseUri>${session.executionRootDirectory}</file-uri-resolver.baseUri>

  </properties>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>seed-xc-maven</id>
      <url>${distribution.url}</url>
    </repository>
  </repositories>

  <build>
    <plugins>

      <!-- This gives us the target quarkus:dev -->
      <plugin>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${quarkus.platform.version}</version>
        <!-- By not providing goals build etc. we exclude maven
	             modules from being evaluated as quarkus services. The
	             service module has to have this plugin, too. Helper
		     libraries do not. -->
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler-plugin.version}</version>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
          <!-- <annotationProcessorPaths> -->
          <!-- 	  <path> -->
          <!--       <groupId>org.projectlombok</groupId> -->
          <!--       <artifactId>lombok</artifactId> -->
          <!--       <version>${dependency.version.lombok}</version> -->
          <!-- 	  </path> -->
          <!-- 	  <path> -->
          <!--       <groupId>org.mapstruct</groupId> -->
          <!--       <artifactId>mapstruct-processor</artifactId> -->
          <!--       <version>${dependency.version.mapstruct}</version> -->
          <!-- 	  </path> -->
          <!-- </annotationProcessorPaths> -->
        </configuration>
      </plugin>

      <!--
		The surefire plugin must be configured because we are using JUnit5.
		See https://quarkus.io/guides/getting-started-testing
	    -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.5.0</version>
        <configuration/>
        <executions>
          <!-- enable flattening -->
          <execution>
            <id>flatten</id>
            <goals>
              <goal>flatten</goal>
            </goals>
            <phase>process-resources</phase>
          </execution>
          <!-- ensure proper cleanup -->
          <execution>
            <id>flatten.clean</id>
            <goals>
              <goal>clean</goal>
            </goals>
            <phase>clean</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <formats>
            <!-- you can define as many formats as you want, each is independent -->
            <format>
              <!-- define the files to apply to -->
              <includes>
                <include>.gitattributes</include>
                <include>.gitignore</include>
              </includes>
              <!-- define the steps to apply to those files -->
              <trimTrailingWhitespace/>
              <endWithNewline/>
              <indent>
                <tabs>true</tabs>
                <spacesPerTab>4</spacesPerTab>
              </indent>
            </format>
          </formats>
          <java>
            <palantirJavaFormat>
              <version>${palantir-java-format.version}</version>
              <style>PALANTIR</style>
              <formatJavadoc>false</formatJavadoc>
            </palantirJavaFormat>
            <indent>
              <tabs>true</tabs>
              <spacesPerTab>4</spacesPerTab>
            </indent>
            <!-- <licenseHeader> -->
            <!--     <content>/* (C)$YEAR */</content> -->
            <!-- </licenseHeader> -->
          </java>
          <pom>
            <includes>
              <include>pom.xml</include>
            </includes>
            <sortPom/>
            <!-- has its own section below -->
          </pom>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
